# Noice

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
assets/shaders/: basic.frag.glsl  basic.vert.glsl  object.frag.glsl  object.vert.glsl  paint_resolve.frag.glsl  paint_stamp.frag.glsl  post.frag.glsl  post.vert.glsl  screenshot_accum.comp.glsl  screenshot_finalize.comp.glsl  scroll_fill.comp.glsl  scroll_move.comp.glsl  text.frag.glsl  text.vert.glsl
shaders/: adapt_scroll.comp.glsl  basic.frag.glsl  basic.vert.glsl  fill_gaps.comp.glsl  fix.frag.glsl  flicker.frag.glsl  forward_scatter.comp.glsl  mix.frag.glsl  noise_init.frag.glsl  post.frag.glsl  post.vert.glsl  simple_scroll.frag.glsl  xor.frag.glsl
src/: app.cpp  app.hpp  camera.cpp  camera.hpp  effect.cpp  effect.hpp  framebuffer.cpp  framebuffer.hpp  main.cpp  mesh.cpp  mesh.hpp  mode.hpp  object.cpp  object.hpp  paint.cpp  paint.hpp  screenshot.cpp  screenshot.hpp  shader.cpp  shader.hpp  text.cpp  text.hpp  util.cpp  util.hpp
src/flowfield/: flowfield.cpp  flowfield.hpp  flowfield_detail.cpp  flowfield_detail.hpp
src/flowload/: flowload.cpp  flowload.hpp
